--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <i class="fa fa-download" aria-hidden="true"></i>
                 <div></div>
                 <div id="notimage" class="hidden">버튼을 눌러 사진을 선택 하세요!</div>
-                <span id="file-upload-btn" class="btn btn-primary" display="block">사진 불러오기</span>
+                <span id="file-upload-btn" class="btn btn-primary notice" display="block">사진 불러오기</span>
             </div>
         </label>
         <label>
