--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <link rel="stylesheet" href="style.css" />
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6160d3f39132201b"></script>
-
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>나와 닮은 연예인 찾기(Find a similar Face)</title>
+
 </head>
 
 <body>
     <!--  navbarStart    -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand fs-3 fw-bold fst-italic" href="#">WSP</a>
+            <a class="navbar-brand fs-3 fw-bold fst-italic" href="#">WonCoding</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,6 +30,10 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">여자연예인</a>
                     </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link disabled" href="femaleList.html" tabindex="-1" aria-disabled="true">여자 연예인 목록
+                        </a>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">남자연예인(개발중)
                         </a>
@@ -86,7 +92,7 @@
                 <!-- 로딩화면 -->
                 <button class="btn btn-primary" type="button" disabled id="loading">
                     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                    Loading...
+                    분석중...
                 </button>
             </div>
             <!-- 로딩화면 -->
