--- a/index.html
+++ b/index.html
@@ -104,13 +104,20 @@
             <div id="image-explain"></div>
 
         </label>
-
+        <div class="ad-banner">
+        <!-- 카카오 애드핏 광고 -->
+        <ins class="kakao_ad_area" style="display:none;" 
+        data-ad-unit    = "DAN-1T2KQOa86jxnMKrL" 
+        data-ad-width   = "320" 
+        data-ad-height  = "100"></ins> 
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        <!-- 카카오애드핏 광고 종료 -->
+        </div>
         <!-- start tweet sns-->
         <div class="addthis_inline_share_toolbox"></div>
         <!-- end tweet sns-->
     </form>
-
-
+    
     <div id="disqus_thread"></div>
     <script>
         /**
@@ -139,6 +146,9 @@
     </script>
     <script src="script.js"></script>
 </body>
+<footer>
+
+</footer>
 <!-- Copyright (c) 2021 by Matt  (https://codepen.io/uixmat/pen/yadZXv)
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
