--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>나와 닮은 연예인 찾기(Find a similar Face)</title>
-
+    <!-- google 광고 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8884168048112383"
+     crossorigin="anonymous"></script>
+    <!-- google 광고 종료 -->
 </head>
 
 <body>
