--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
         <!-- start tweet sns-->
         <div class="addthis_inline_share_toolbox"></div>
         <!-- end tweet sns-->
+        <ins class="kakao_ad_area" style="display:none;" 
+        data-ad-unit    = "DAN-CpZbr5MdM6EFsJet" 
+        data-ad-width   = "300" 
+        data-ad-height  = "250"></ins> 
+        <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     </form>
     
     <div id="disqus_thread"></div>
