--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div></div>
                 <div id="notimage" class="hidden">버튼을 눌러 사진을 선택 하세요!</div>
                 <span id="file-upload-btn" class="btn btn-primary notice" display="block">사진 불러오기</span>
-                <div>촬영된(보관함) 사진은 화면에서만 보여지며 저장되지 않습니다.</div>
+                <div>촬영된(선택된) 사진은 화면에서만 보여지며 저장되지 않습니다.</div>
             </div>
         </label>
         <label>
