--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div></div>
                 <div id="notimage" class="hidden">버튼을 눌러 사진을 선택 하세요!</div>
                 <span id="file-upload-btn" class="btn btn-primary notice" display="block">사진 불러오기</span>
-                <div>촬영된(선택된) 사진은 화면에서만 보여지며 저장되지 않습니다.</div>
+                <div>촬영(선택)된 사진은 화면에서만 보여지며 <strong>저장되지 않습니다.</strong></div>
             </div>
         </label>
         <label>
@@ -103,7 +103,7 @@
             <!-- 로딩화면 -->
 
             <div id="label-container" ></div>
-            <div id="notice">정확한 측정을 위하여 가능한 얼굴을 크게 촬영해주세요<br>헤어스타일,안경등 특정 사물에 의하여 왜곡될 수 있습니다.</div>
+            <div id="notice">정확한 측정을 위하여 <strong>가능한 얼굴만을</strong> 촬영해주세요<br>헤어스타일,안경등 특정 사물에 의하여 왜곡될 수 있습니다.</div>
             <div id="image-explain"></div>
 
         </label>
@@ -147,7 +147,6 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
             Disqus.</a></noscript>
-    Copy
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
