--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8884168048112383"
      crossorigin="anonymous"></script>
     <!-- google 광고 종료 -->
+    <meta name="google-site-verification" content="9lDK2TY9U5F5za0ULKqqHA4u-69otIh1ZrwqXoNfgpk" />
 </head>
 
 <body>
