--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="www.woncoding.shop/face_recognition.jpeg">
+    <meta property="og:image" content="http://www.woncoding.shop/face_recognition.jpeg">
+    <meta property="og:type" content="website"> 
+    <meta property="og:title" content="나와 닮은 연예인 찾기">
+    <meta property="og:description" content="닮은 연예인, 인싸,">
+    
+    <meta property="og:url" content="http://www.mysite.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
