--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="http://www.woncoding.shop/face_recognition.jpeg">
     <meta property="og:type" content="website"> 
-    <meta property="og:title" content="나와 닮은 연예인 찾기">
-    <meta property="og:description" content="닮은 연예인, 인싸,">
-    
+    <meta property="og:title" content="닮은 연예인">
+    <meta property="og:description" content="닮은 연예인,AI,인싸,">
     <meta property="og:url" content="http://www.mysite.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -18,7 +17,7 @@
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6160d3f39132201b"></script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>나와 닮은 연예인 찾기(Find a similar Face)</title>
+    <title>닮은 연예인</title>
     <!-- google 광고 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8884168048112383"
      crossorigin="anonymous"></script>
