--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="description" content="AI를 이용한 나와 닮은 연예인 찾기">
     <meta property="og:type" content="website"> 
-    <meta property="og:title" content="닮은 연예인">
-    <meta property="og:description" content="닮은 연예인,AI,인싸,">
+    <meta property="og:title" content="연예인 닮은꼴 찾기">
+    <meta property="og:description" content="연예인닮은꼴찾기,AI,인싸,">
     <meta property="og:image" content="http://www.woncoding.shop/face_recognition.jpeg">
     <meta property="og:url" content="http://www.woncoding.shop">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
