--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="AI를 이용한 나와 닮은 연예인 찾기">
     <meta property="og:type" content="website"> 
     <meta property="og:title" content="연예인 닮은꼴 찾기">
-    <meta property="og:description" content="연예인닮은꼴찾기,AI,인싸,">
+    <meta property="og:description" content="AI(Google Teachable Machine)가 당신과 닮은 연예인을 찾아 드립니다.">
     <meta property="og:image" content="http://www.woncoding.shop/face_recognition.jpeg">
     <meta property="og:url" content="http://www.woncoding.shop">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
