--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AI를 이용한 나와 닮은 연예인 찾기">
+    <meta name="description" content="닮은꼴 연예인찾기">
     <meta property="og:type" content="website"> 
+    <meta property="og:image" content="http://www.woncoding.shop/face_recognition.jpeg">
     <meta property="og:title" content="연예인 닮은꼴 찾기">
     <meta property="og:description" content="AI(Google Teachable Machine)가 당신과 닮은 연예인을 찾아 드립니다.">
-    <meta property="og:image" content="http://www.woncoding.shop/face_recognition.jpeg">
     <meta property="og:url" content="http://www.woncoding.shop">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
