--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="ko">
 
 <head>
+    <!-- google 광고 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8884168048112383"
+    crossorigin="anonymous"></script>
+   <!-- google 광고 종료 -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,10 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
-     <!-- google 광고 -->
-     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8884168048112383"
-     crossorigin="anonymous"></script>
-    <!-- google 광고 종료 -->
+     
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6160d3f39132201b"></script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -89,6 +90,9 @@
 
             <img id="file-image" src="#" alt="Preview" class="hidden rounded  img-fluid " />
             <img id="file-image1" src="#" alt="Preview" class="hidden rounded  img-fluid " />
+            <img id="file-image2" src="#" alt="Preview" class="hidden rounded  img-fluid " />
+            <img id="file-image3" src="#" alt="Preview" class="hidden rounded  img-fluid " />
+
             <div id="start">
                 <i class="fa fa-download" aria-hidden="true"></i>
                 <div></div>
@@ -121,16 +125,18 @@
         data-ad-width   = "320" 
         data-ad-height  = "100"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-        <!-- 카카오애드핏 광고 종료 -->
         </div>
+        <!-- 카카오애드핏 광고 종료 -->
         <!-- start tweet sns-->
         <div class="addthis_inline_share_toolbox"></div>
         <!-- end tweet sns-->
+        <!-- 카카오하단광고 -->
         <ins class="kakao_ad_area" style="display:none;" 
         data-ad-unit    = "DAN-CpZbr5MdM6EFsJet" 
         data-ad-width   = "300" 
         data-ad-height  = "250"></ins> 
         <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        <!-- 카카오하단광고 -->
     </form>
     
     <div id="disqus_thread"></div>
