--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6160d3f39132201b"></script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>닮은 연예인</title>
+    <title>AI로 분석한 나의 헤어,패션스타일 찾기</title>
    
     
 </head>
@@ -40,14 +40,14 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">여자연예인</a>
+                        <a class="nav-link active" aria-current="page" href="#">여성</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link disabled" href="femaleList.html" tabindex="-1" aria-disabled="true">여자 연예인 목록
                         </a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">남자연예인(개발중)
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">남성(개발중)
                         </a>
                     </li>
                     <!-- <li class="nav-item">
@@ -69,8 +69,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript"></script>
     
-    <h4 class="mb-1 mt-2">나와 닮은</h4>
-    <h6 class="mb-3">대한민국 <span id="gender" >여자</span>연예인은?</h6>
+    <h4 class="mb-1 mt-2">닮은 연예인을 찾아</h4>
+    <h6 class="mb-3">헤어스타일과 패션 스타일 찾아보자!</h6>
 
     <!-- Upload  -->
 
