--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 
         <label for="file-upload" id="file-drag">
 
-            <img id="file-image" src="#" alt="Preview" class="hidden rounded  img-fluid " />
-            <img id="file-image1" src="#" alt="Preview" class="hidden rounded  img-fluid " />
-            <img id="file-image2" src="#" alt="Preview" class="hidden rounded  img-fluid " />
-            <img id="file-image3" src="#" alt="Preview" class="hidden rounded  img-fluid " />
+            <img id="file-image" src="#" alt="Preview" class="hidden img-fluid " />
+            <img id="file-image1" src="#" alt="Preview" class="hidden img-fluid " />
+            <img id="file-image2" src="#" alt="Preview" class="hidden img-fluid " />
+            <img id="file-image3" src="#" alt="Preview" class="hidden img-fluid " />
 
             <div id="start">
                 <i class="fa fa-download" aria-hidden="true"></i>
@@ -175,7 +175,7 @@
     <script src="script.js"></script>
 </body>
 <footer>
-    <div>Copyright (c) 2021 by WonCoding</div>
+    <div>Copyright by ⓒ Woncoding 2021- All Right Reserved</div>
 </footer>
 <!-- Copyright (c) 2021 by Matt  (https://codepen.io/uixmat/pen/yadZXv)
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
