--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                         </a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">남성(개발중)
+                        <a class="nav-link" href="/male.html" >남성
                         </a>
                     </li>
                     <!-- <li class="nav-item">
             <a class="nav-link" href="#">아이돌</a>
           </li> -->
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> Game(개발중)</a>
                     </li>
-                </ul>
+                </ul> -->
                 <!-- <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
