--- a/male.html
+++ b/male.html
@@ -37,7 +37,7 @@
     <!--  navbarStart    -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand fs-3 fw-bold fst-italic" href="#">WonCoding</a>
+            <a class="navbar-brand fs-3 fw-bold fst-italic" href="/index.html">WonCoding</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
