--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </li>
                     <!-- <li class="nav-item">
             <a class="nav-link" href="#">아이돌</a>
-          </li> -->
+                   </li> -->
                     <!-- <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> Game(개발중)</a>
                     </li>
@@ -119,13 +119,14 @@
             <!-- 로딩화면 -->
 
             <div id="label-container" ></div>
-            <div id="notice">정확한 측정을 위하여 <strong>가능한 얼굴만을</strong> 촬영해주세요<br>헤어스타일,안경등 특정 사물에 의하여 왜곡될 수 있습니다.</div>
+            <div id="notice">정확한 측정을 위하여 <strong>가능한 얼굴만을</strong> 촬영해주세요
+                <br>헤어스타일,안경등 특정 사물에 의하여 왜곡될 수 있습니다.
+                <br><span style="color:blue;"> 하단 광고 클릭은 개발자가 더 나은 개발을 할 수 있도록 만들어 주는 여러분의 후원입니다.</span>
+                <br>연예인 추가 등록은 00:00 ~ 02:00에 업데이트 됩니다.
+            </div>
             
         </label>
-        <!-- <label>
-            <div id="myHairStyle">인공지능이 찾아낸 나의 헤어 스타일!</div>
-            <div id="myFationStyle">인공지능이 추천하는 나의 패션스타일!</div>
-        </label> -->
+    
         <div class="ad-banner">
         <!-- 카카오 애드핏 광고 -->
         <ins class="kakao_ad_area" style="display:none;" 
@@ -175,7 +176,7 @@
     <script src="script.js"></script>
 </body>
 <footer>
-    <div>Copyright by ⓒ Woncoding 2021- All Right Reserved</div>
+    <div>Copyright by ⓒ Woncoding 2021- All Right Reserved version:1.11</div>
 </footer>
 <!-- Copyright (c) 2021 by Matt  (https://codepen.io/uixmat/pen/yadZXv)
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
