--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div id="notice">정확한 측정을 위하여 <strong>가능한 얼굴만을</strong> 촬영해주세요
                 <br>헤어스타일,안경등 특정 사물에 의하여 왜곡될 수 있습니다.
                 <br><span style="color:blue;"> 하단 광고 클릭은 개발자가 더 나은 개발을 할 수 있도록 만들어 주는 여러분의 후원입니다.</span>
-                <br>연예인 추가 등록은 00:00 ~ 02:00에 업데이트 됩니다.
+                <br>연예인 이미지는 구글에 공개된 이미지가 크롤링되어 00:00 ~ 02:00에 업데이트 됩니다.
             </div>
             
         </label>
