--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8884168048112383" crossorigin="anonymous"></script>
    <!-- google 광고 종료 -->
     <title>AI로 분석한 나와 닮은 연예인</title>
-   
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-213339423-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-213339423-1');
+</script>
     
 </head>
 
