--- a/male.html
+++ b/male.html
@@ -128,8 +128,10 @@
             <!-- 로딩화면 -->
 
             <div id="label-container" ></div>
-            <div id="notice">정확한 측정을 위하여 <strong>가능한 얼굴만을</strong> 촬영해주세요<br>헤어스타일,안경등 특정 사물에 의하여 왜곡될 수 있습니다.</div>
-            
+            <div id="notice">정확한 측정을 위하여 <strong>가능한 얼굴만을</strong> 촬영해주세요
+                <br>헤어스타일,안경등 특정 사물에 의하여 왜곡될 수 있습니다.
+                <br>구글에 공개된 이미지가 크롤링되어 매일 0시 ~ 02시에 업데이트 됩니다.
+            </div>
         </label>
         <!-- <label>
             <div id="myHairStyle">인공지능이 찾아낸 나의 헤어 스타일!</div>
