--- a/male.html
+++ b/male.html
@@ -84,7 +84,7 @@
     <script type="text/javascript"></script>
     
     <h4 class="mb-1 mt-2">나와 닮은</h4>
-    <h6 class="mb-3">대한민국 <span id="gender">남자</span> 연예인 찾기</h6>
+    <h6 class="mb-3">대한민국 <span id="gender">남성</span> 연예인 찾기</h6>
 
     <!-- Upload  -->
 
